--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -81,12 +81,12 @@ import Icon from "astro-iconify";
             <div data-aos="zoom-in" class="md:p-2 w-full md:w-[50%] lg:w-[33%] mt-5 md:mt-0 lg:mt-2">
                 <div class="card-servicio">
                     <div>
-                        <img src="/img/gallery5.webp" alt="">
+                        <img src="/img/gallery7.jpg" alt="">
                     </div>
                     <div class="info-servicio">
                         <span>$1300</span>
                         <h2>$715</h2>
-                        <h4 class="nombre">Delineado de Ojo</h4>
+                        <h4 class="nombre">Realce de pestañas</h4>
                         <p class="block-with-text descripcion">Técnica de maquillaje semipermanente por medio de la cual se depositan pigmentos en el párpado, recreando el delineado de ojos o, incluso, un sombreado.</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
@@ -110,7 +110,7 @@ import Icon from "astro-iconify";
                         <img src="/img/acidoglicolico1.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1900</span>
+                        <span>$2450</span>
                         <h2>$1715</h2>
                         <h4 class="nombre">Acido Glicolico - 7 Sesiones</h4>
                         <p class="block-with-text descripcion">Ayuda a la hiperpigmentación, las quemaduras solares, reduce las líneas de expresión, arrugas, manchas y le devuelve la luminosidad al rostro. El ácido glicólico corrige los problemas de la piel favoreciendo la renovación celular de las capas superiores de esta a través de la exfoliación. Ayuda frente a la sequedad de la piel, el eczema y la psoriasis, así como también, las verrugas, la piel áspera y la rosácea.</p>
@@ -132,7 +132,7 @@ import Icon from "astro-iconify";
                         <img src="/img/acidoglicolico2.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1500</span>
+                        <span>$1950</span>
                         <h2>$1365</h2>
                         <h4 class="nombre">Acido Glicolico - 5 Sesiones</h4>
                         <p class="block-with-text descripcion">Ayuda a la hiperpigmentación, las quemaduras solares, reduce las líneas de expresión, arrugas, manchas y le devuelve la luminosidad al rostro. El ácido glicólico corrige los problemas de la piel favoreciendo la renovación celular de las capas superiores de esta a través de la exfoliación. Ayuda frente a la sequedad de la piel, el eczema y la psoriasis, así como también, las verrugas, la piel áspera y la rosácea.</p>
@@ -154,7 +154,7 @@ import Icon from "astro-iconify";
                         <img src="/img/acidoglicolico3.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1100</span>
+                        <span>$1260</span>
                         <h2>$882</h2>
                         <h4 class="nombre">Acido Glicolico - 3 Sesiones</h4>
                         <p class="block-with-text descripcion">Ayuda a la hiperpigmentación, las quemaduras solares, reduce las líneas de expresión, arrugas, manchas y le devuelve la luminosidad al rostro. El ácido glicólico corrige los problemas de la piel favoreciendo la renovación celular de las capas superiores de esta a través de la exfoliación. Ayuda frente a la sequedad de la piel, el eczema y la psoriasis, así como también, las verrugas, la piel áspera y la rosácea.</p>
@@ -180,9 +180,9 @@ import Icon from "astro-iconify";
                         <img src="/img/radiofrecuencia1.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1200</span>
+                        <span>$1400</span>
                         <h2>$1120</h2>
-                        <h4 class="nombre">Radio Frecuancia Facial - 7 Sesiones</h4>
+                        <h4 class="nombre">Radio Frecuencia Facial - 7 Sesiones</h4>
                         <p class="block-with-text descripcion">Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
@@ -202,9 +202,9 @@ import Icon from "astro-iconify";
                         <img src="/img/radiofrecuencia2.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1200</span>
-                        <h2>$1120</h2>
-                        <h4 class="nombre">Radio Frecuancia Facial - 5 Sesiones</h4>
+                        <span>$1100</span>
+                        <h2>$880</h2>
+                        <h4 class="nombre">Radio Frecuencia Facial - 5 Sesiones</h4>
                         <p class="block-with-text descripcion">Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
@@ -224,9 +224,9 @@ import Icon from "astro-iconify";
                         <img src="/img/radiofrecuencia3.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1200</span>
-                        <h2>$1120</h2>
-                        <h4 class="nombre">Radio Frecuancia Facial - 3 Sesiones</h4>
+                        <span>$825</span>
+                        <h2>$660</h2>
+                        <h4 class="nombre">Radio Frecuencia Facial - 3 Sesiones</h4>
                         <p class="block-with-text descripcion">Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
@@ -250,8 +250,8 @@ import Icon from "astro-iconify";
                         <img src="/img/dermapen1.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$2800</span>
-                        <h2>$2690</h2>
+                        <span>$2690</span>
+                        <h2>$2450</h2>
                         <h4 class="nombre">Dermapen - 7 Sesiones</h4>
                         <p class="block-with-text descripcion">Sirve para estimular la elastina y el colágeno de forma natural. Por esa razón logra reducir manchas, arrugas, cicatrices o imperfecciones. Ayuda a corregir las imperfecciones de la piel.</p>
                         <div class="btn-group mt-5">
@@ -272,8 +272,8 @@ import Icon from "astro-iconify";
                         <img src="/img/dermapen2.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$2200</span>
-                        <h2>$2100</h2>
+                        <span>$2100</span>
+                        <h2>$1700</h2>
                         <h4 class="nombre">Dermapen - 5 Sesiones</h4>
                         <p class="block-with-text descripcion">Sirve para estimular la elastina y el colágeno de forma natural. Por esa razón logra reducir manchas, arrugas, cicatrices o imperfecciones. Ayuda a corregir las imperfecciones de la piel.</p>
                         <div class="btn-group mt-5">
@@ -294,8 +294,8 @@ import Icon from "astro-iconify";
                         <img src="/img/dermapen3.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1500</span>
-                        <h2>$1380</h2>
+                        <span>$1380</span>
+                        <h2>$1010</h2>
                         <h4 class="nombre">Dermapen - 3 Sesiones</h4>
                         <p class="block-with-text descripcion">Sirve para estimular la elastina y el colágeno de forma natural. Por esa razón logra reducir manchas, arrugas, cicatrices o imperfecciones. Ayuda a corregir las imperfecciones de la piel.</p>
                         <div class="btn-group mt-5">
@@ -320,7 +320,7 @@ import Icon from "astro-iconify";
                         <img src="/img/talla1.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$2800</span>
+                        <span>$3700</span>
                         <h2>$2405</h2>
                         <h4 class="nombre">Reduccion de Tallas - 15 Sesiones</h4>
                         <p class="block-with-text descripcion">Método no invasivo que consiste en la reducción de pliegues cutáneos, las cuales consisten en calentar el tejido para la licuefacción de la grasa, con lo que se rompen los enlaces y se puede eliminar a través del sistema linfático. Moldea el cuerpo y reduce la celulitis que es producto del exceso de grasa acumulada en el cuerpo.</p>
@@ -342,7 +342,7 @@ import Icon from "astro-iconify";
                         <img src="/img/talla2.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1950</span>
+                        <span>$2800</span>
                         <h2>$1820</h2>
                         <h4 class="nombre">Reduccion de Tallas - 10 Sesiones</h4>
                         <p class="block-with-text descripcion">Método no invasivo que consiste en la reducción de pliegues cutáneos, las cuales consisten en calentar el tejido para la licuefacción de la grasa, con lo que se rompen los enlaces y se puede eliminar a través del sistema linfático. Moldea el cuerpo y reduce la celulitis que es producto del exceso de grasa acumulada en el cuerpo.</p>
@@ -364,8 +364,8 @@ import Icon from "astro-iconify";
                         <img src="/img/talla3.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1620</span>
-                        <h2>$1502</h2>
+                        <span>$2310</span>
+                        <h2>$1505</h2>
                         <h4 class="nombre">Reduccion de Tallas - 7 Sesiones</h4>
                         <p class="block-with-text descripcion">Método no invasivo que consiste en la reducción de pliegues cutáneos, las cuales consisten en calentar el tejido para la licuefacción de la grasa, con lo que se rompen los enlaces y se puede eliminar a través del sistema linfático. Moldea el cuerpo y reduce la celulitis que es producto del exceso de grasa acumulada en el cuerpo.</p>
                         <div class="btn-group mt-5">
@@ -386,7 +386,7 @@ import Icon from "astro-iconify";
                         <img src="/img/talla4.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1320</span>
+                        <span>$1850</span>
                         <h2>$1203</h2>
                         <h4 class="nombre">Reduccion de Tallas - 5 Sesiones</h4>
                         <p class="block-with-text descripcion">Método no invasivo que consiste en la reducción de pliegues cutáneos, las cuales consisten en calentar el tejido para la licuefacción de la grasa, con lo que se rompen los enlaces y se puede eliminar a través del sistema linfático. Moldea el cuerpo y reduce la celulitis que es producto del exceso de grasa acumulada en el cuerpo.</p>
@@ -412,8 +412,9 @@ import Icon from "astro-iconify";
                         <img src="/img/nanoplastia1.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$500</span>
-                        <h2>$450</h2>
+                        <!-- <span>$500</span> -->
+                        <h2>$1200 a $3800</h2>
+                        <small>El precio depende del largo del cabello.</small>
                         <h4 class="nombre">Nanoplastia</h4>
                         <p class="block-with-text descripcion">Es un alisante progresivo con control de frizz, hidratación a profundidad, regenera la fibra capilar, proporcionando elasticidad y brillo el cual realiza un alisado del 90% al 100% y lo mantiene liso de 4 a 6 meses.</p>
                         <div class="btn-group mt-5">
