--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,9 +35,7 @@ import 'aos/dist/aos.css';
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3W6N035QCF"></script>
 <script>
 	import AOS from "aos"; 
-	AOS.init({
-		offset: 40,
-	});
+	AOS.init();
 	
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
