--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,17 +12,6 @@ import { Icon } from 'astro-iconify'
 	<div class="section-btn-whatsapp" id="element-to-hide">
 		<a href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita"><Icon name="ic:baseline-whatsapp" /></a>
 	</div>
-	<!-- <div id="alert-1" class="flex items-center p-4 text-white bg-greensea-custom" role="alert">
-		<Icon name="heroicons:calendar-date-range" class="icon-sm" />
-		<span class="sr-only">Info</span>
-		<div class="ms-3 text-sm font-medium">
-			<a href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita" class="font-semibold underline hover:no-underline">Reserva tu proxima cita con nosotros</a>
-		</div>
-		<button type="button" class="ms-auto -mx-1.5 -my-1.5 inline-flex items-center justify-center h-6 w-6" data-dismiss-target="#alert-1" aria-label="Close">
-			<span class="sr-only">Close</span>
-			<Icon name="heroicons:x-mark" class="text-white" />
-		</button>
-	</div> -->
 	<div id="inicio"></div>
 	<Menu />
 	<section class="h-[550px] md:h-auto">
@@ -41,8 +30,8 @@ import { Icon } from 'astro-iconify'
 					<img src="/img/carousel_2.webp" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
 					<div class="absolute inset-0 bg-black/65"></div>
 					<div class="absolute inset-0 flex items-center justify-center flex-col px-2 sm:px-20 md:px-32 text-center">
-						<h1 class="text-white text-4xl font-bold">¡Felices Fiestas Patrias!</h1>
-						<p class="text-white textarea-md">Renueva tu estilo y brilla con orgullo patrio. Conoce las promociones que tenemos para ti.</p>
+						<h1 class="text-white text-4xl font-bold">Bienvenido Octubre ¡Sorprendeme!</h1>
+						<p class="text-white textarea-md">Conoce las promociones que tenemos para ti.</p>
 						<a class="btn btn-greensea" href="#servicios">Conocer Promociones</a>
 					</div>
 				</div>
