Ajustes de galeria

--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -94,7 +94,7 @@ import Icon from "astro-iconify";
                                 Conocer mas
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
-                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Punteo%20de%20Pestañas*" target="_blank">Agenda Cita</a>
+                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Realce%20de%20Pestañas*" target="_blank">Agenda Cita</a>
                         </div>
                         
                     </div>
