--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,6 +171,24 @@ import { Icon } from 'astro-iconify'
 				<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom">
 					<img class="h-auto max-w-full rounded-lg" src="/img/gallery6.webp" alt="">
 				</div>
+				<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery7.jpg" alt="">
+				</div>
+				<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery8.jpg" alt="">
+				</div>
+				<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery9.jpg" alt="">
+				</div>
+				<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery10.jpg" alt="">
+				</div>
+				<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery11.jpg" alt="">
+				</div>
+				<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery12.jpg" alt="">
+				</div>
 		</div>
 
 	</section>
