Ajuste de servicios

--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -14,6 +14,9 @@ import Icon from "astro-iconify";
             <button class="inline-block btn-filtro-servicio active" id="promociones-tab" data-tabs-target="#promociones" type="button" role="tab" aria-controls="promociones" aria-selected="false">Promociones</button>
         </li>
         <li class="me-2" role="presentation">
+            <button class="inline-block btn-filtro-servicio" id="paquetes-tab" data-tabs-target="#paquetes" type="button" role="tab" aria-controls="paquetes" aria-selected="false">Paquetes</button>
+        </li>
+        <li class="me-2" role="presentation">
             <button class="inline-block btn-filtro-servicio" id="acidoglicolico-tab" data-tabs-target="#acidoglicolico" type="button" role="tab" aria-controls="acidoglicolico" aria-selected="false">Acido Glicolico</button>
         </li>
         <li class="me-2" role="presentation">
@@ -95,6 +98,76 @@ import Icon from "astro-iconify";
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
                             <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Realce%20de%20Pestañas*" target="_blank">Agenda Cita</a>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="hidden pt-3 px-5" id="paquetes" role="tabpanel" aria-labelledby="paquetes-tab">
+        <div class="md:flex md:flex-row md:flex-wrap">
+            <div data-aos="zoom-in" class="md:p-2 w-full md:w-[50%] lg:w-[33%] mt-5 md:mt-3 lg:mt-2">
+                <div class="card-servicio">
+                    <div>
+                        <img src="/img/acidoglicolico1.webp" alt="">
+                    </div>
+                    <div class="info-servicio">
+                        <span>$3270</span>
+                        <h2>$2125</h2>
+                        <h4 class="nombre">Acido Glicolico + Radiofrecuencia Facial - 14 Sesiones (7 + 7)</h4>
+                        <p class="block-with-text descripcion">Ayuda a la hiperpigmentación, las quemaduras solares, reduce las líneas de expresión, arrugas, manchas y le devuelve la luminosidad al rostro. El ácido glicólico corrige los problemas de la piel favoreciendo la renovación celular de las capas superiores de esta a través de la exfoliación. Ayuda frente a la sequedad de la piel, el eczema y la psoriasis, así como también, las verrugas, la piel áspera y la rosácea. Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
+                        <div class="btn-group mt-5">
+                            <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
+                            <div id="tooltip-animation" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                                Conocer mas
+                                <div class="tooltip-arrow" data-popper-arrow></div>
+                            </div>
+                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Nanoplastia*" target="_blank">Agenda Cita</a>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div data-aos="zoom-in" class="md:p-2 w-full md:w-[50%] lg:w-[33%] mt-5 md:mt-3 lg:mt-2">
+                <div class="card-servicio">
+                    <div>
+                        <img src="/img/acidoglicolico2.webp" alt="">
+                    </div>
+                    <div class="info-servicio">
+                        <span>$2590</span>
+                        <h2>$1684</h2>
+                        <h4 class="nombre">Acido Glicolico + Radiofrecuencia Facial - 10 Sesiones (5 + 5)</h4>
+                        <p class="block-with-text descripcion">Ayuda a la hiperpigmentación, las quemaduras solares, reduce las líneas de expresión, arrugas, manchas y le devuelve la luminosidad al rostro. El ácido glicólico corrige los problemas de la piel favoreciendo la renovación celular de las capas superiores de esta a través de la exfoliación. Ayuda frente a la sequedad de la piel, el eczema y la psoriasis, así como también, las verrugas, la piel áspera y la rosácea. Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
+                        <div class="btn-group mt-5">
+                            <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
+                            <div id="tooltip-animation" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                                Conocer mas
+                                <div class="tooltip-arrow" data-popper-arrow></div>
+                            </div>
+                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Nanoplastia*" target="_blank">Agenda Cita</a>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div data-aos="zoom-in" class="md:p-2 w-full md:w-[50%] lg:w-[33%] mt-5 md:mt-3 lg:mt-2">
+                <div class="card-servicio">
+                    <div>
+                        <img src="/img/acidoglicolico3.webp" alt="">
+                    </div>
+                    <div class="info-servicio">
+                        <span>$1773</span>
+                        <h2>$1153</h2>
+                        <h4 class="nombre">Acido Glicolico + Radiofrecuencia Facial - 6 Sesiones (3 + 3)</h4>
+                        <p class="block-with-text descripcion">Ayuda a la hiperpigmentación, las quemaduras solares, reduce las líneas de expresión, arrugas, manchas y le devuelve la luminosidad al rostro. El ácido glicólico corrige los problemas de la piel favoreciendo la renovación celular de las capas superiores de esta a través de la exfoliación. Ayuda frente a la sequedad de la piel, el eczema y la psoriasis, así como también, las verrugas, la piel áspera y la rosácea. Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
+                        <div class="btn-group mt-5">
+                            <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
+                            <div id="tooltip-animation" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                                Conocer mas
+                                <div class="tooltip-arrow" data-popper-arrow></div>
+                            </div>
+                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Nanoplastia*" target="_blank">Agenda Cita</a>
                         </div>
                         
                     </div>
