--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -123,7 +123,7 @@ import Icon from "astro-iconify";
                                 Conocer mas
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
-                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Acido%20Glicolico%20+%20Radiofrecuencia%20Facial%20-%2014%20Sesiones%20(7%20+%207)*" target="_blank">Agenda Cita</a>
+                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Acido%20Glicolico%20y%20Radiofrecuencia%20Facial%20-%2014%20Sesiones%20(7%20y%207)*" target="_blank">Agenda Cita</a>
                         </div>
                         
                     </div>
@@ -145,7 +145,7 @@ import Icon from "astro-iconify";
                                 Conocer mas
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
-                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Acido%20Glicolico%20+%20Radiofrecuencia%20Facial%20-%2010%20Sesiones%20(5%20+%205)*" target="_blank">Agenda Cita</a>
+                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Acido%20Glicolico%20y%20Radiofrecuencia%20Facial%20-%2010%20Sesiones%20(5%20y%205)*" target="_blank">Agenda Cita</a>
                         </div>
                         
                     </div>
@@ -167,7 +167,7 @@ import Icon from "astro-iconify";
                                 Conocer mas
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
-                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Acido%20Glicolico%20+%20Radiofrecuencia%20Facial%20-%206%20Sesiones%20(3%20+%203)*" target="_blank">Agenda Cita</a>
+                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Acido%20Glicolico%20y%20Radiofrecuencia%20Facial%20-%206%20Sesiones%20(3%20y%203)*" target="_blank">Agenda Cita</a>
                         </div>
                         
                     </div>
