Ajuste de precio

--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -275,8 +275,8 @@ import Icon from "astro-iconify";
                     </div>
                     <div class="info-servicio">
                         <span>$1300</span>
-                        <h2>$715</h2>
-                        <h4 class="nombre">Resalte de pestañas</h4>
+                        <h2>$900</h2>
+                        <h4 class="nombre">Realce de pestañas</h4>
                         <p class="block-with-text descripcion">Técnica de micropigmentación semipermanente que consiste en realizar un punteado en el nacimiento de las pestañas.</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
@@ -284,7 +284,7 @@ import Icon from "astro-iconify";
                                 Conocer mas
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
-                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Resalte%20de%20pestañas*" target="_blank">Agenda Cita</a>
+                            <a class="btn2" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita%20para:%20*Realce%20de%20pestañas*" target="_blank">Agenda Cita</a>
                         </div>
                         
                     </div>
