Ajuste del carrusel

--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -253,7 +253,7 @@ import Icon from "astro-iconify";
                     </div>
                     <div class="info-servicio">
                         <span>$2800</span>
-                        <h2>$1500</h2>
+                        <h2>$2500</h2>
                         <h4 class="nombre">Microblading</h4>
                         <p class="block-with-text descripcion">Es un tratamiento semipermanente que consiste en aplicar pigmento en las cejas para simular pelos y darles un aspecto natural y poblado.</p>
                         <div class="btn-group mt-5">
@@ -460,7 +460,7 @@ import Icon from "astro-iconify";
                     <div class="info-servicio">
                         <span>$1500</span>
                         <h2>$1080</h2>
-                        <h4 class="nombre">Radio Frecuencia Facial - 7 Sesiones</h4>
+                        <h4 class="nombre">Radiofrecuencia Facial - 7 Sesiones</h4>
                         <p class="block-with-text descripcion">Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
@@ -482,7 +482,7 @@ import Icon from "astro-iconify";
                     <div class="info-servicio">
                         <span>$1200</span>
                         <h2>$900</h2>
-                        <h4 class="nombre">Radio Frecuencia Facial - 5 Sesiones</h4>
+                        <h4 class="nombre">Radiofrecuencia Facial - 5 Sesiones</h4>
                         <p class="block-with-text descripcion">Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
@@ -504,7 +504,7 @@ import Icon from "astro-iconify";
                     <div class="info-servicio">
                         <span>$900</span>
                         <h2>$610</h2>
-                        <h4 class="nombre">Radio Frecuencia Facial - 3 Sesiones</h4>
+                        <h4 class="nombre">Radiofrecuencia Facial - 3 Sesiones</h4>
                         <p class="block-with-text descripcion">Restructura el colágeno profundamente y aumentar la circulación sanguínea, produce una mayor elasticidad de los tejidos y una mejora de la estructura cutánea, la firmeza y las arrugas. Activa el colágeno y ayuda a eliminar las arrugas y la flacidez. La piel se vuelve más tersa y suave. ¡Es el lifting sin cirugía!</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
