--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ import { Icon } from 'astro-iconify'
 					<img src="/img/carousel_2.webp" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
 					<div class="absolute inset-0 bg-black/65"></div>
 					<div class="absolute inset-0 flex items-center justify-center flex-col px-2 sm:px-20 md:px-32 text-center">
-						<h1 class="text-white text-4xl font-bold">Bienvenido Octubre ¡Sorprendeme!</h1>
-						<p class="text-white textarea-md">Conoce las promociones que tenemos para ti.</p>
+						<h1 class="text-white text-4xl font-bold">¡Este Buen Fin, tu mejor versión!</h1>
+						<p class="text-white textarea-md">Ofertas especiales en nuestros tratamientos de belleza. ¡Date el gusto de renovarte!</p>
 						<a class="btn btn-greensea" href="#servicios">Conocer Promociones</a>
 					</div>
 				</div>
