--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -23,7 +23,7 @@ import Icon from "astro-iconify";
             <button class="inline-block btn-filtro-servicio" id="acidoglicolico-tab" data-tabs-target="#acidoglicolico" type="button" role="tab" aria-controls="acidoglicolico" aria-selected="false">Acido Glicolico</button>
         </li>
         <li class="me-2" role="presentation">
-            <button class="inline-block btn-filtro-servicio" id="frecuenciafacial-tab" data-tabs-target="#frecuenciafacial" type="button" role="tab" aria-controls="frecuenciafacial" aria-selected="false">Frecuencia Facial</button>
+            <button class="inline-block btn-filtro-servicio" id="frecuenciafacial-tab" data-tabs-target="#frecuenciafacial" type="button" role="tab" aria-controls="frecuenciafacial" aria-selected="false">Radiofrecuencia</button>
         </li>
         <li class="me-2" role="presentation">
             <button class="inline-block btn-filtro-servicio" id="dermapen-tab" data-tabs-target="#dermapen" type="button" role="tab" aria-controls="dermapen" aria-selected="false">Dermapen</button>
